// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/inventory/material-categories > administrador gestiona > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "orderBy": [
        {
          "estado": "desc",
        },
        {
          "nombre": "asc",
        },
      ],
      "select": {
        "descripcion": true,
        "estado": true,
        "id_categoria_material": true,
        "nombre": true,
        "slug": true,
      },
    },
    "prisma": "categoria_material.findMany",
  },
]
`;

exports[`/dashboard/inventory/material-categories > administrador gestiona > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory/materials">Materiales</a>
</li>
<li>
<svg/>
<span aria-current="page">Categorías</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Categorías de materiales</h1>
<p>Administra las categorías dinámicas usadas por materiales e insumos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a materiales">
<svg/>Volver a materiales</button>
</div>
</div>
</section>
<div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<h2>Nueva categoría</h2>
<div>
<label for="nombre">Nombre</label>
<input id="nombre" required="" name="nombre"/>
</div>
<div>
<label for="slug">Slug</label>
<input id="slug" placeholder="materia_prima" required="" name="slug"/>
</div>
<div>
<label for="descripcion">Descripción</label>
<textarea id="descripcion" name="descripcion" rows="4">
</textarea>
</div>
<button data-variant="default" type="submit">Crear</button>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Nombre</th>
<th>Slug</th>
<th>Descripción</th>
<th>Estado</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_categoria_material-1</td>
<td colSpan="3">
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_categoria_material" value="id_categoria_material-1"/>
<div>
<input required="" name="nombre" value="nombre-1"/>
</div>
<div>
<input required="" name="slug" value="slug-1"/>
</div>
<div>
<textarea name="descripcion">descripcion-1</textarea>
</div>
<button data-variant="outline" type="submit">Editar</button>
</form>
</td>
<td>
<span data-variant="success">Activa</span>
</td>
<td>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_categoria_material" value="id_categoria_material-1"/>
<button data-variant="outline" type="submit">Inactivar</button>
</form>
</td>
</tr>
<tr>
<td>id_categoria_material-2</td>
<td colSpan="3">
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_categoria_material" value="id_categoria_material-2"/>
<div>
<input required="" name="nombre" value="nombre-2"/>
</div>
<div>
<input required="" name="slug" value="slug-2"/>
</div>
<div>
<textarea name="descripcion">
</textarea>
</div>
<button data-variant="outline" type="submit">Editar</button>
</form>
</td>
<td>
<span data-variant="outline">Inactiva</span>
</td>
<td>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_categoria_material" value="id_categoria_material-2"/>
<button data-variant="outline" type="submit">Activar</button>
</form>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/material-categories > maestro de taller solo consulta > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "orderBy": [
        {
          "estado": "desc",
        },
        {
          "nombre": "asc",
        },
      ],
      "select": {
        "descripcion": true,
        "estado": true,
        "id_categoria_material": true,
        "nombre": true,
        "slug": true,
      },
    },
    "prisma": "categoria_material.findMany",
  },
]
`;

exports[`/dashboard/inventory/material-categories > maestro de taller solo consulta > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory/materials">Materiales</a>
</li>
<li>
<svg/>
<span aria-current="page">Categorías</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Categorías de materiales</h1>
<p>Administra las categorías dinámicas usadas por materiales e insumos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a materiales">
<svg/>Volver a materiales</button>
</div>
</div>
</section>
<div role="alert">
<div>Tu usuario puede consultar categorías, pero solo ADMIN puede crearlas o modificarlas.</div>
</div>
<div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<h2>Nueva categoría</h2>
<div>
<label for="nombre">Nombre</label>
<input id="nombre" disabled="" required="" name="nombre"/>
</div>
<div>
<label for="slug">Slug</label>
<input id="slug" placeholder="materia_prima" disabled="" required="" name="slug"/>
</div>
<div>
<label for="descripcion">Descripción</label>
<textarea id="descripcion" name="descripcion" rows="4" disabled="">
</textarea>
</div>
<button data-variant="default" type="submit" disabled="">Crear</button>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Nombre</th>
<th>Slug</th>
<th>Descripción</th>
<th>Estado</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_categoria_material-1</td>
<td colSpan="3">
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_categoria_material" value="id_categoria_material-1"/>
<div>
<input disabled="" required="" name="nombre" value="nombre-1"/>
</div>
<div>
<input disabled="" required="" name="slug" value="slug-1"/>
</div>
<div>
<textarea name="descripcion" disabled="">descripcion-1</textarea>
</div>
</form>
</td>
<td>
<span data-variant="success">Activa</span>
</td>
<td>
<span>Solo lectura</span>
</td>
</tr>
<tr>
<td>id_categoria_material-2</td>
<td colSpan="3">
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_categoria_material" value="id_categoria_material-2"/>
<div>
<input disabled="" required="" name="nombre" value="nombre-2"/>
</div>
<div>
<input disabled="" required="" name="slug" value="slug-2"/>
</div>
<div>
<textarea name="descripcion" disabled="">
</textarea>
</div>
</form>
</td>
<td>
<span data-variant="outline">Inactiva</span>
</td>
<td>
<span>Solo lectura</span>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;
